fixed overflow issue

--- a/src/components/style/index.css
+++ b/src/components/style/index.css
@@ -3,8 +3,11 @@
 }
 
 body {
+  height: 100vh;
+  width: 100vw;
   display: flex;
   justify-content: center;
+  margin: 0;
 }
 
 h1 {
@@ -12,20 +15,23 @@ h1 {
 }
 
 .container {
-  width: 90%;
-  margin: 0 auto;
+  /* width: 90%; */
+  margin: 4rem auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
 }
 
 .table {
   display: grid;
   grid-template-columns: repeat(17, auto) 1fr;
-  height: 100vh;
-  width: 100vw;
 }
 
 .element {
-  width: 6vw;
-  height: 6vw;
+  width: 5vw;
+  height: 5vw;
   padding: 2px;
   border: 1px solid #333333;
   border-collapse: collapse;
